# simple_opencl

./: CMakeLists.txt  README.md
OpenCL/: license.txt
src/: ocl_device.cpp  ocl_device.h  ocl_kernels.h  simple_ocl.cpp  simple_ocl_wrapper.h
